Release notes "dita13.lc.extra-interactions" version 2.3

Add: 
* new interaction: lceGraphicAssociate - interaction where you can reate hotspots and set relation between hotspots (drawing lines)
* new element lceExplanation: based on div, available in undbounded choice group with lcAsset2; should be used to explain the content/context of a question/answer
* new attribute contentclass, based on base; should be used for the semantic meaning of an element instead of outputclass


Release notes "dita13.lc.extra-interactions" version 2.2.1
* Changed content model of lcePerformQuestion.content: add lcOpenAnswer2


Release notes "dita13.lc.extra-interactions" version 2.2
* Add new interactions: lceChainMatching - matching items from more than two bukkets