@@ -9,6 +9,7 @@
     <system systemId="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.2" uri="lceLearningAssessment.xsd" />
     <system systemId="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.2.1" uri="lceLearningAssessment.xsd" />
     <system systemId="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.3" uri="lceLearningAssessment.xsd" />
+    <system systemId="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:3.0" uri="lceLearningAssessment.xsd" />
     
     <uri name="lceLearningAssessment.xsd" uri="lceLearningAssessment.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:1.0" uri="lceLearningAssessment.xsd" />
@@ -17,6 +18,7 @@
     <uri name="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.2" uri="lceLearningAssessment.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.2.1" uri="lceLearningAssessment.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:2.3" uri="lceLearningAssessment.xsd" />
+    <uri name="urn:dita13lce:names:xsd:lceLearningAssessment.xsd:3.0" uri="lceLearningAssessment.xsd" />
     
     <system systemId="lceLearningContent.xsd" uri="lceLearningContent.xsd" />
     <system systemId="urn:dita13lce:names:xsd:lceLearningContent.xsd:1.0" uri="lceLearningContent.xsd" />
@@ -25,6 +27,7 @@
     <system systemId="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.2" uri="lceLearningContent.xsd" />
     <system systemId="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.2.1" uri="lceLearningContent.xsd" />
     <system systemId="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.3" uri="lceLearningContent.xsd" />
+    <system systemId="urn:dita13lce:names:xsd:lceLearningContent.xsd:3.0" uri="lceLearningContent.xsd" />
     
     <uri name="lceLearningContent.xsd" uri="lceLearningContent.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningContent.xsd:1.0" uri="lceLearningContent.xsd" />
@@ -33,6 +36,7 @@
     <uri name="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.2" uri="lceLearningContent.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.2.1" uri="lceLearningContent.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceLearningContent.xsd:2.3" uri="lceLearningContent.xsd" />
+    <uri name="urn:dita13lce:names:xsd:lceLearningContent.xsd:3.0" uri="lceLearningContent.xsd" />
   </group>
   
   <group xml:base="lceAtts/">
@@ -59,6 +63,14 @@
     
     <uri name="lceContentclassAttsDomain.xsd" uri="lceContentclassAttsDomain.xsd" />
     <uri name="urn:dita13lce:names:xsd:lceContentclassAttsDomain.xsd" uri="lceContentclassAttsDomain.xsd" />
+  </group>
+  
+  <group xml:base="lceBox/">
+    <system systemId="lceBoxDomain.xsd" uri="lceBoxDomain.xsd" />
+    <system systemId="urn:dita13lce:names:xsd:lceBoxDomain.xsd" uri="lceBoxDomain.xsd" />
+    
+    <uri name="lceBoxDomain.xsd" uri="lceBoxDomain.xsd" />
+    <uri name="urn:dita13lce:names:xsd:lceBoxDomain.xsd" uri="lceBoxDomain.xsd" />
   </group>
   
   <group xml:base="lceData/">
