@@ -23,14 +23,6 @@
         </xs:sequence>
     </xs:group>
     
-    <xs:group name="lceStartEntry">
-        <xs:sequence>
-            <xs:choice>
-                <xs:element ref="lceStartEntry"/>
-            </xs:choice>
-        </xs:sequence>
-    </xs:group>
-    
 <!-- ============================================================= -->
     <xs:element name="lceAnswerOptionInline">
         <xs:annotation>
@@ -57,7 +49,6 @@
             <xs:choice minOccurs="0" maxOccurs="1">
                 <xs:group ref="lcCorrectResponse2"/>
                 <xs:group ref="lceAlternativeResponse"/>
-                <xs:group ref="lceStartEntry"/>
             </xs:choice>
             <xs:group ref="lceFeedbackInlineCorrect" minOccurs="0"/>
             <xs:group ref="lceFeedbackInlineIncorrect" minOccurs="0"/>
@@ -102,34 +93,5 @@
         <xs:attributeGroup ref="global-atts"/>
     </xs:attributeGroup>
     
-    <xs:element name="lceStartEntry">
-        <xs:annotation>
-            <xs:documentation>The lceStartEntry element indicates an entry which is already filled to have a starting point</xs:documentation>
-        </xs:annotation>
-        <xs:complexType>
-            <xs:complexContent>
-                <xs:extension base="lceStartEntry.class">
-                    <xs:attribute ref="class"
-                        default="+ topic/data learningInteractionBase2-d/data lceentry-d/lceStartEntry "/>
-                </xs:extension>
-            </xs:complexContent>
-        </xs:complexType>
-    </xs:element>
-    <xs:complexType name="lceStartEntry.class">
-        <xs:sequence>
-            <xs:group ref="lceStartEntry.content"/>
-        </xs:sequence>
-        <xs:attributeGroup ref="lceStartEntry.attributes"/>
-    </xs:complexType>
-    <xs:group name="lceStartEntry.content">
-        <xs:sequence/>
-    </xs:group>
-    <xs:attributeGroup name="lceStartEntry.attributes">
-        <xs:attribute name="name" type="xs:string"/>
-        <xs:attribute name="value" type="xs:string"/>
-        <xs:attributeGroup ref="univ-atts"/>
-        <xs:attribute name="outputclass" type="xs:string"/>
-        <xs:attributeGroup ref="global-atts"/>
-    </xs:attributeGroup>
-  
+    
 </xs:schema>
