@@ -72,6 +72,7 @@
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceMatchDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceEntryDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceExplanationDomain.xsd"/>
+   <xs:include schemaLocation="urn:dita13lce:names:xsd:lceBoxDomain.xsd"/>
    
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceAnswerAttsDomain.xsd"/>
    <xs:include schemaLocation="urn:dita13lce:names:xsd:lceOrientationAttsDomain.xsd"/>
