@@ -1,6 +1,9 @@
-Release notes "dita13.lc.extra-interactions" version 2.3
 
-Add: 
+Release notes "dita13.lc.extra-interactions" version 3.0
+* Delete element lceStartEtry for fixed text in gaps, now use attribute answertype
+* Add values "fixed" and "placeholder" to attribute answertype 
+
+Release notes "dita13.lc.extra-interactions" version 2.3 
 * new interaction: lceGraphicAssociate - interaction where you can reate hotspots and set relation between hotspots (drawing lines)
 * new element lceExplanation: based on div, available in undbounded choice group with lcAsset2; should be used to explain the content/context of a question/answer
 * new attribute contentclass, based on base; should be used for the semantic meaning of an element instead of outputclass
